package register

type Item struct {
	Id           int
	Organization string
	City         string
	Phone        string
}
